APM-882 Move all parameters to variables to re-use

--- a/azure/templates/deploy-service.yml
+++ b/azure/templates/deploy-service.yml
@@ -1,7 +1,3 @@
-parameters:
-  - name: SERVICE_BASE_PATH
-    type: string
-
 steps:
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.8'
@@ -42,7 +38,7 @@ steps:
       echo "!!! If you get an error here, it is because '$(SERVICE_NAME)' is not the source alias name of the artifact"
       export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/$(SERVICE_NAME)`
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
-      echo "Deploying $SERVICE_ARTIFACT_NAME to ${{ parameters.SERVICE_BASE_PATH }} on $(ENV_URL)"
+      echo "Deploying $SERVICE_ARTIFACT_NAME to $(SERVICE_BASE_PATH) on $(ENV_URL)"
       echo "Using custom terraform: $(USE_CUSTOM_TERRAFORM)"
     displayName: 'Deploy $(SERVICE_NAME) > Deploy Info'
 
@@ -50,7 +46,7 @@ steps:
       set -euo pipefail
     
       export PROXIES_DIR="$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies"
-      export SERVICE_BASE_PATH="${{ parameters.SERVICE_BASE_PATH }}"
+      export SERVICE_BASE_PATH="$(SERVICE_BASE_PATH)"
       export APIGEE_ENVIRONMENT="$(APIGEE_ENVIRONMENT)"
       
       make --no-print-directory -C utils/ansible template-proxies
