--- a/azure/templates/identity-service-templating.yml
+++ b/azure/templates/identity-service-templating.yml
@@ -1,11 +1,3 @@
-parameters:
-- name: VARIABLES_KVM
-  type: string
-- name: ENCRYPTED_VARIABLES_KVM
-  type: string
-- name: IDENTITY_TARGET_SERVER
-  type: string
-
 steps:
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.8'
@@ -32,18 +24,18 @@ steps:
       
       cd utils
       
-      poetry run python scripts/template.py '{"VARIABLES_KVM": "${{ parameters.VARIABLES_KVM }})"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml > /tmp/live.xml
+      poetry run python scripts/template.py '{"VARIABLES_KVM": "$(VARIABLES_KVM)"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml > /tmp/live.xml
       mv /tmp/live.xml $(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml
       
-      poetry run python scripts/template.py '{"ENCRYPTED_VARIABLES_KVM": "${{ parameters.ENCRYPTED_VARIABLES_KVM }}"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml > /tmp/live.xml
+      poetry run python scripts/template.py '{"ENCRYPTED_VARIABLES_KVM": "$(ENCRYPTED_VARIABLES_KVM)"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml > /tmp/live.xml
       mv /tmp/live.xml $(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml
       
-      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "${{ parameters.IDENTITY_TARGET_SERVER }}"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml > /tmp/live.xml
+      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml > /tmp/live.xml
       mv /tmp/live.xml $(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml
       
-      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "${{ parameters.IDENTITY_TARGET_SERVER }}"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml > /tmp/live.xml
+      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml > /tmp/live.xml
       mv /tmp/live.xml $(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml
       
-      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "${{ parameters.IDENTITY_TARGET_SERVER }}"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml > /tmp/live.xml
+      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml > /tmp/live.xml
       mv /tmp/live.xml $(Pipeline.Workspace)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml
     displayName: 'Set KVM and Target Server'
