--- a/azure/templates/deploy-service.yml
+++ b/azure/templates/deploy-service.yml
@@ -4,33 +4,13 @@ steps:
     inputs:
       versionSpec: 3.8
 
-  - bash: |
-      sudo apt-get install git -y
-      git clone https://github.com/NHSDigital/api-management-utils.git utils
-      cd utils
-      pip install --upgrade pip setuptools
-      pip install poetry
-      poetry install
-    displayName: 'Deploy $(SERVICE_NAME) > Set up utils'
+  - template: ../components/setup-utils.yml
 
-  - template: setup-terraform.yml
+  - template: ../components/setup-terraform.yml
 
-  - bash: |
-      sudo apt-get install oathtool gnupg2 jq -y
-      export MFA_CODE=`oathtool --totp -b '$(APIGEE_OTP_KEY)'`
-      echo "##vso[task.setvariable variable=secret.MFACode;issecret=true]$MFA_CODE"
-    displayName: 'Deploy $(SERVICE_NAME) > Get MFA Code'
+  - template: ../components/get-mfa-code.yml
 
-  - bash: |
-      curl -X POST https://login.apigee.com/oauth/token \
-        -H "Content-Type: application/x-www-form-urlencoded" \
-        -H "Accept: application/json;charset=utf-8" \
-        -H "Authorization: Basic ZWRnZWNsaTplZGdlY2xpc2VjcmV0" \
-        -d "username=$(APIGEE_USERNAME)&password=$(APIGEE_PASSWORD)&mfa_token=$(secret.MFACode)&grant_type=password" | jq .access_token > .token
-      
-      # Set token into variable
-      echo "##vso[task.setvariable variable=secret.AccessToken;issecret=true]`cat .token`"
-    displayName: 'Deploy $(SERVICE_NAME) > Get Access Token'
+  - template: ../components/get-access-token.yml
 
   - bash: |
       set -euo pipefail
