--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -9,6 +9,8 @@ variables:
   VARIABLES_KVM: identity-service-variables
   ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
   IDENTITY_TARGET_SERVER: identity-server
+  FORCE_SANDBOX: false
+  NAMESPACE: from_branchname
 
 resources:
   pipelines:
