APM-882 Change trigger and add test echos

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -1,7 +1,10 @@
 name: Identity Service Pull Request
 
 pr:
-- master
+  branches:
+    include:
+    - APM-*
+    - apm-*
 
 variables:
   SERVICE_NAME: IdentityService
