APM-882 exvlude master from build

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -3,8 +3,10 @@ name: Identity Service Pull Request
 pr:
   branches:
     include:
-    - APM-*
-    - apm-*
+      - APM-*
+      - apm-*
+    exclude:
+      - master
 
 variables:
   SERVICE_NAME: IdentityService
