--- a/azure/templates/deploy-namespaced-service.yml
+++ b/azure/templates/deploy-namespaced-service.yml
@@ -18,10 +18,9 @@ steps:
       
       echo "!!! If you get an error here, it is because '$(SERVICE_NAME)' is not the source alias name of the artifact"
       export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/$(SERVICE_NAME)`
-
-      echo $(NAMESPACE) $(FORCE_SANDBOX)
       
       if [ "$(NAMESPACE)" == "from_branchname" ]; then
+        # Change reference to get from right area
         export NAMESPACE=`echo $(Release.Artifacts.$(SERVICE_NAME).BuildNumber) | tr '+' '\n' | head -n 1 | sed -e "s/\./_/g"`
       else
         export NAMESPACE="$(NAMESPACE)"
