--- a/azure/templates/identity-service-templating.yml
+++ b/azure/templates/identity-service-templating.yml
@@ -5,6 +5,8 @@ steps:
       versionSpec: 3.8
 
   - template: ../components/setup-utils.yml
+    parameters:
+      NAME: $(SERVICE_NAME)
 
   - bash: |
       set -euo pipefail
