--- a/azure/components/get-access-token.yml
+++ b/azure/components/get-access-token.yml
@@ -1,3 +1,7 @@
+parameters:
+  - name: NAME
+    type: string
+    
 steps:
   - bash: |
       curl -X POST https://login.apigee.com/oauth/token \
@@ -8,4 +12,4 @@ steps:
       
       # Set token into variable
       echo "##vso[task.setvariable variable=secret.AccessToken;issecret=true]`cat .token`"
-    displayName: 'Deploy $(SERVICE_NAME) > Get Access Token'
+    displayName: 'Deploy ${{ parameters.NAME }} > Get Access Token'
