--- a/azure/components/get-mfa-code.yml
+++ b/azure/components/get-mfa-code.yml
@@ -1,3 +1,7 @@
+parameters:
+  - name: NAME
+    type: string
+
 steps:
 - bash: |
     # Install requirements 
@@ -6,4 +10,4 @@ steps:
     # Save code to variable
     export MFA_CODE=`oathtool --totp -b '$(APIGEE_OTP_KEY)'`
     echo "##vso[task.setvariable variable=secret.MFACode;issecret=true]$MFA_CODE"
-  displayName: 'Deploy $(SERVICE_NAME) > Get MFA Code'
+  displayName: 'Deploy ${{ parameters.NAME }} > Get MFA Code'
