--- a/azure/templates/deploy-specs.yml
+++ b/azure/templates/deploy-specs.yml
@@ -11,34 +11,17 @@ steps:
   inputs:
     versionSpec: 3.8
 
-- bash: |
-   sudo apt-get install git -y
-   git clone https://github.com/NHSDigital/api-management-utils.git utils
-   cd utils
-   pip install --upgrade pip setuptools
-   pip install poetry
-   poetry install
-  displayName: 'Deploy Specs to $(APIGEE_ENVIRONMENT) > Set up utils'
+- template: ../components/setup-utils.yml
+  parameters:
+   NAME: $(APIGEE_ENVIRONMENT)
 
-- bash: |
-   # Install requirements 
-   sudo apt-get install oathtool gnupg2 jq -y
-   
-   # Save code to variable
-   export MFA_CODE=`oathtool --totp -b '$(APIGEE_OTP_KEY)'`
-   echo "##vso[task.setvariable variable=secret.MFACode;issecret=true]$MFA_CODE"
-  displayName: 'Deploy Specs to $(APIGEE_ENVIRONMENT) > Get MFA Code'
+- template: ../components/get-mfa-code.yml
+  parameters:
+   NAME: $(APIGEE_ENVIRONMENT)
 
-- bash: |
-   curl --fail -X POST https://login.apigee.com/oauth/token \
-     -H "Content-Type: application/x-www-form-urlencoded" \
-     -H "Accept: application/json;charset=utf-8" \
-     -H "Authorization: Basic ZWRnZWNsaTplZGdlY2xpc2VjcmV0" \
-     -d "username=$(APIGEE_USERNAME)&password=$(APIGEE_PASSWORD)&mfa_token=$(secret.MFACode)&grant_type=password" | jq .access_token > .token
-   
-   # Set token into variable
-   echo "##vso[task.setvariable variable=secret.AccessToken;issecret=true]`cat .token`"
-  displayName: 'Deploy Specs to $(APIGEE_ENVIRONMENT) > Get Access Token'
+- template: ../components/get-access-token.yml
+  parameters:
+   NAME: $(APIGEE_ENVIRONMENT)
 
 - bash: |
    cd utils
