APM-822 Get branch name from artifact name

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -10,6 +10,7 @@ pr:
 
 variables:
   SERVICE_NAME: IdentityService
+  ARTIFACT_SERVICE_NAME: identity-service
   SERVICE_BASE_PATH: /oauth2
   VARIABLES_KVM: identity-service-variables
   ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
