--- a/azure/templates/deploy-namespaced-service.yml
+++ b/azure/templates/deploy-namespaced-service.yml
@@ -26,18 +26,13 @@ steps:
       
       echo "!!! If you get an error here, it is because '$(SERVICE_NAME)' is not the source alias name of the artifact"
       export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/$(SERVICE_NAME)`
-
-      echo $(NAMESPACE)
       
       if [ "$(NAMESPACE)" == "from_branchname" ]; then
         # Change reference to get from right area
-        export NAMESPACE=`echo $(SERVICE_ARTIFACT_NAME) | tr '+' '\n' | head -n 1 | sed -e "s/\./_/g"`
-        echo "From Branch name: $(NAMESPACE)"
+        export _NAMESPACE=`echo ${$(SERVICE_ARTIFACT_NAME)//$(ARTIFACT_SERVICE_NAME)-/''}`
       else
         export NAMESPACE="$(NAMESPACE)"
       fi
-
-      echo $(NAMESPACE)
       
       if [ $(FORCE_SANDBOX) == "true" ]; then
         export NAMESPACE="$NAMESPACE-sandbox"
