--- a/azure/templates/deploy-namespaced-service.yml
+++ b/azure/templates/deploy-namespaced-service.yml
@@ -27,13 +27,14 @@ steps:
       echo "!!! If you get an error here, it is because '$(SERVICE_NAME)' is not the source alias name of the artifact"
       export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/$(SERVICE_NAME)`
       
+      echo "RunID: $(resources.pipeline.$(SERVICE_NAME).runID)"
+      
       if [ "$(NAMESPACE)" == "from_branchname" ]; then
         # Change reference to get from right area
         export NAMESPACE=`echo $(SERVICE_ARTIFACT_NAME) | sed "s/$(ARTIFACT_SERVICE_NAME)-//g"`
       else
         export NAMESPACE="$(NAMESPACE)"
       fi
-      
       
       if [ $(FORCE_SANDBOX) == "true" ]; then
         export NAMESPACE="$NAMESPACE-sandbox"
