APM-822 Change download artifact job

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -8,20 +8,29 @@ pr:
       - APM-*
       - apm-*
 
+resources:
+  pipelines:
+  - pipeline: IdentityService
+    source: Build-Pipeline
+
+parameters:
+  - name : artifactBranch
+    displayName: Artifact Branch (e.g. feature/myfeature)
+    type: string
+    default: $(Build.SourceBranch)
+  - name : artifactBuildId
+    displayName: Artifact Build Id (e.g. run Id for the build to download). Overrides Artifact Branch if not "latest".
+    type: string
+    default: latest
+
 variables:
   SERVICE_NAME: IdentityService
-  ARTIFACT_SERVICE_NAME: identity-service
   SERVICE_BASE_PATH: /oauth2
   VARIABLES_KVM: identity-service-variables
   ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
   IDENTITY_TARGET_SERVER: identity-server
   FORCE_SANDBOX: false
   NAMESPACE: from_branchname
-
-resources:
-  pipelines:
-  - pipeline: IdentityService
-    source: NHSDigital.identity-service-api
 
 pool:
   vmImage: 'ubuntu-18.04'
@@ -34,9 +43,24 @@ stages:
   - group: env-internal-dev
   jobs:
     - job: DeployService
+      displayName: Deploy Service
       steps:
         - checkout: none
         - task: DownloadBuildArtifacts@0
-          displayName: 'Download Build Artifacts'
+          displayName: 'Download Build Artifact'
+          inputs:
+            buildType: 'specific'
+            project: '$(resources.pipeline.IdentityService.projectID)'
+            definition: '$(resources.pipeline.IdentityService.pipelineID)'
+            ${{ if eq(parameters.artifactBuildId, 'latest') }}:
+              buildVersionToDownload: 'latestFromBranch'
+            ${{ if ne(parameters.artifactBuildId, 'latest') }}:
+              buildVersionToDownload: 'specific'
+              runId: '${{ parameters.artifactBuildId }}'
+            ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+              branchName: '$(Build.SourceBranch)'
+            ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+              branchName: 'refs/heads/${{ parameters.artifactBranch }}'
+            downloadPath: '$(Pipeline.Workspace)'
         - template: templates/identity-service-templating.yml
         - template: templates/deploy-namespaced-service.yml
