APM-882 Change build pipeline name

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -11,7 +11,8 @@ pr:
 resources:
   pipelines:
   - pipeline: IdentityService
-    source: Build-Pipeline
+    source: "Identity-Service-Build-Pipeline"
+
 
 parameters:
   - name : artifactBranch
