APM-882 Revert artifact source

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -11,7 +11,7 @@ pr:
 resources:
   pipelines:
   - pipeline: IdentityService
-    source: "Identity-Service-Build-Pipeline"
+    source: NHSDigital.identity-service-api
 
 
 parameters:
