--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -21,7 +21,7 @@ resources:
     source: NHSDigital.identity-service-api
 
 pool:
-  vmImage: 'ubuntu-18.04'
+  vmImage: 'ubuntu-latest'
 
 stages:
 - stage: DeployInternalDev
