APM-882 Test deploy

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -2,11 +2,20 @@ name: Identity Service Pull Request
 
 trigger: none
 
-pr:
-  branches:
-    include:
-      - APM-*
-      - apm-*
+resources:
+  pipelines:
+  - pipeline: IdentityService
+    source: NHSDigital.identity-service-api
+
+parameters:
+  - name : artifactBranch
+    displayName: Artifact Branch (e.g. feature/myfeature)
+    type: string
+    default: $(Build.SourceBranch)
+  - name : artifactBuildId
+    displayName: Artifact Build Id (e.g. run Id for the build to download). Overrides Artifact Branch if not "latest".
+    type: string
+    default: latest
 
 variables:
   SERVICE_NAME: IdentityService
@@ -17,13 +26,8 @@ variables:
   FORCE_SANDBOX: false
   NAMESPACE: from_branchname
 
-resources:
-  pipelines:
-  - pipeline: IdentityService
-    source: NHSDigital.identity-service-api
-
 pool:
-  vmImage: 'ubuntu-18.04'
+  vmImage: 'ubuntu-latest'
 
 stages:
 - stage: DeployInternalDev
@@ -32,12 +36,25 @@ stages:
   - group: apigee-nonprod
   - group: env-internal-dev
   jobs:
-    - deployment: DeployService
+    - job: DeployService
       displayName: Deploy Service
-      environment: 'internal-dev'
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-              - template: templates/identity-service-templating.yml
-              - template: templates/deploy-namespaced-service.yml
+      steps:
+        - checkout: none
+        - task: DownloadBuildArtifacts@0
+          displayName: 'Download Build Artifact'
+          inputs:
+            buildType: 'specific'
+            project: '$(resources.pipeline.IdentityService.projectID)'
+            definition: '$(resources.pipeline.IdentityService.pipelineID)'
+            ${{ if eq(parameters.artifactBuildId, 'latest') }}:
+              buildVersionToDownload: 'latestFromBranch'
+            ${{ if ne(parameters.artifactBuildId, 'latest') }}:
+              buildVersionToDownload: 'specific'
+              runId: '${{ parameters.artifactBuildId }}'
+            ${{ if eq(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+              branchName: '$(Build.SourceBranch)'
+            ${{ if ne(parameters.artifactBranch, '$(Build.SourceBranch)') }}:
+              branchName: 'refs/heads/${{ parameters.artifactBranch }}'
+            downloadPath: '$(Pipeline.Workspace)'
+        - template: templates/identity-service-templating.yml
+        - template: templates/deploy-namespaced-service.yml
